Fixing OpenSSL for Windows 10 RTM and 1511 builds.

--- a/ms/vstemplates/OpenSSLTestAppUniversal10.0/OpenSSLTestApp.vcxproj
+++ b/ms/vstemplates/OpenSSLTestAppUniversal10.0/OpenSSLTestApp.vcxproj
@@ -7,7 +7,9 @@
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <AppContainerApplication>true</AppContainerApplication>
     <ApplicationType>Windows Store</ApplicationType>
-    <ApplicationTypeRevision>8.2</ApplicationTypeRevision>
+    <ApplicationTypeRevision>10.0</ApplicationTypeRevision>
+    <WindowsTargetPlatformVersion>10.0.10240.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformMinVersion>10.0.10240.0</WindowsTargetPlatformMinVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <ItemGroup Label="ProjectConfigurations">
